# trojan-r

./: Cargo.toml  Cross.toml  Makefile  README.md  cross.toml  rule.txt
.github/workflows/: nightly.yaml  rust.yml
config/: client.toml  forward.toml  server.toml
src/: main.rs
src/error/: mod.rs
src/protocol/: mod.rs
src/protocol/direct/: acceptor.rs  connector.rs  mod.rs
src/protocol/dokodemo/: acceptor.rs  mod.rs
src/protocol/mux/: acceptor.rs  connector.rs  header.rs  mod.rs
src/protocol/plaintext/: acceptor.rs
src/protocol/socks5/: acceptor.rs  header.rs  mod.rs
src/protocol/tls/: acceptor.rs  connector.rs  mod.rs
src/protocol/trojan/: acceptor.rs  connector.rs  header.rs  mod.rs
src/protocol/websocket/: acceptor.rs  connector.rs  mod.rs
src/proxy/: mod.rs
test-ca/: README.md
