[package]
name = "trojan-r"
version = "0.0.1"
authors = ["Page Fault <p4gefau1t@gmail.com>"]
edition = "2018"

[dependencies]
smol = "1.2"
bytes = "0.5"
pin-project = "1.0"
log = "0.4"
async-trait = "0.1"
futures = "0.3"
async-tls = "0.10"
rustls = { version = "0.18" }
sha2 = "0.9"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] } 
webpki = "0.21"
env_logger = "0.8"
toml = "0.5"
num_cpus = "1.13"
clap = "2.33"
webpki-roots = "0.20"
async-tungstenite = "0.9"
async_io_stream = "0.1"

[profile.release]
lto = true